# CS-lab-project

./: .gitignore  CMakeLists.txt  README.md
Client/client/: client.pro  main.cpp
Client/client/logic/: authmanager.cpp  authmanager.h  chatcontroller.cpp  chatcontroller.h  chatmanager.cpp  chatmanager.h
Client/client/src/core/: AppState.cpp  AppState.h  Message.cpp  Message.h
Client/client/src/gui/: ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
Client/client/src/network/: JsonNetworkClient.cpp  JsonNetworkClient.h
Client/client/userscreen/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/users-screen/UsersScreem/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/: server.cpp
src/core/: CMakeLists.txt  ChatManager.cpp  Message.cpp  Message.h
src/gui/: CMakeLists.txt  ChatRoomScreen.cpp  ChatRoomScreen.h  ChatWindow.h  ChatWindow.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h
